--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,17 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+
+  flutter_launcher_icons: "^0.7.0"
+
   flutter_test:
     sdk: flutter
 
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
